osm leaflet fixed to show on mobile

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 /* Responsive Frame to mimic App */
 .mobile-frame {
   width: 100%;
-  flex: 1;
+  height: 100dvh;
   background-color: var(--color-bg-frame);
   display: flex;
   flex-direction: column;
@@ -61,8 +61,6 @@ body {
     min-height: 100vh;
   }
   .mobile-frame {
-    flex: none;
-    max-width: 390px;
     width: 390px;
     height: 844px;
     max-height: 90vh;
